--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/4.png" alt="Tribute Page" width="w-full" />
+              <img src="dist/img/portfolio/laundry.jpg" alt="Tribute Page" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Elaundry Web Applications</h3>
+            <p class="text-base font-medium text-secondary">Manajemen system laundry</p>
           </div>
         </div>
       </div>
