memperbaiki tentang saya

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Nanda Tritona</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Web & <span class="text-dark dark:text-white">Mobile Developer</span></h2>
-            <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar pemograman itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
+            <p class="mb-10 font-medium leading-relaxed text-secondary">Saya seorang software developer web dan mobile applications. Saya sangat senang jika bisa membatu mengembangkan produk digital anda.. <span class="font-bold text-dark dark:text-white">Thanks you!</span></p>
 
             <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi Saya</a>
           </div>
@@ -114,7 +114,7 @@
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Full Stack Developer</h2>
             <p class="mb-3 max-w-xl text-base font-medium text-secondary lg:text-lg">Saat ini saya bekerja di perusahaan <span class="text-white font-bold">PT Pulau Sambu</span>, sebagai Full Stack Web Developer & Mobile Developer.</p>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Di bidang saya (Full Stack Developer), memiliki tugas dan bertanggung jawab dalam mengembangkan sebuah aplikasi atau sistem mulai dari perancangan user interface, pembuatan logic yang tersusun dari banyak code, manajemen database, hingga memastikan user experience berada pada kondisi yang baik.</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya memiliki tugas dan bertanggung jawab dalam mengembangkan sebuah aplikasi atau sistem mulai dari perancangan user interface, pembuatan logic yang tersusun dari banyak code, manajemen database, hingga memastikan user experience berada pada kondisi yang baik.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
